--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,20 @@
  <!-- SEO Base -->
 <meta name="description" content="FANTAEUROVISION25 è il fantasy game più celestiale del web. Sfida altri fedeli, crea la tua squadra di papabili e conquista il trono del conclave!">
 <meta name="keywords" content="fantacalcio, fantasy game, conclave, papabili, SWISSHEARTS, sfide, FANTAEUROVISION25">
-<meta name="author" content="fantaconclave.it">
+<meta name="author" content="fantaeurovision25">
 
 <!-- Open Graph per condivisione social -->
 <meta property="og:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
 <meta property="og:description" content="Sfida altri fedeli, guadagna SWISSHEARTS e conquista il trono. Habemus Magnum Victorem!">
-<meta property="og:image" content="https://fantaconclave.it/icons/sh.png"> 
-<meta property="og:url" content="https://fantaconclave.it/">
+<meta property="og:image" content="https://fantaeurovision25/icons/sh.png"> 
+<meta property="og:url" content="https://fantaeurovision25/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
 <meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di papabili e vinci!">
-<meta name="twitter:image" content="https://fantaconclave.it/icons/sh.png">
+<meta name="twitter:image" content="https://fantaeurovision25/icons/sh.png">
 
  
   <title>FANTAEUROVISION25 - Home</title>
@@ -55,8 +55,8 @@
       font-family: 'Barlow Condensed', sans-serif;
       font-weight: 700;
       font-size: 48px;
-      color: #FFFF00;
-      margin: 20px 0;
+      color: #0bdad7;
+      margin: 0px 0;
       text-align: center;
     }
     .intro, .how-to-play, .video {
@@ -67,7 +67,7 @@
     h2 {
       font-family: 'Barlow Condensed', sans-serif;
       font-weight: 700;
-      color: #FFFF00;
+      color: #0bdad7;
       margin-bottom: 10px;
       text-transform: uppercase;
     }
@@ -104,16 +104,16 @@
       min-width: 300px;
     }
     .btn-yellow {
-      background-color: #FFFF00;
+      background-color: #0bdad7;
       color: #333;
     }
     .btn-outline-yellow {
-      border: 2px solid #FFFF00;
-      color: #FFFF00;
+      border: 2px solid #0bdad7;
+      color: #0bdad7;
       background: transparent;
     }
     a {
-      color: #FFFF00;
+      color: #0bdad7;
       text-decoration: underline;
     }
     .footer {
@@ -123,24 +123,30 @@
   </style>
 </head>
 <body>
-  <div class="logo-text">FANTAEUROVISION25</div>
-
-  <div class="intro">
-    <p><strong>Il fantasy game più celestiale del web.</strong> Sfida altri fedeli nel gioco dove i papabili diventano protagonisti. Divertiti, guadagna SWISSHEARTS e conquista il trono del conclave!</p>
+  <div class="logo-text">FANTA</div>
+  <div class="logo-image">
+    <img src="images/logo.png" alt="Logo FANTAEUROVISION25" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
   </div>
 
+  <div class="intro">
+    <p><strong>Il fantasy musicale più divertente del web!</strong> Scegli i tuoi artisti preferiti, sfida gli altri fan e colleziona SWISSHEARTS. La vetta della classifica ti aspetta... a suon di hit!</p>
+  </div>
+  
   <div class="how-to-play">
     <h2>Come si gioca</h2>
     <p>
-      <strong>Sic et simpliciter:</strong><br>
+      <strong>Facile come un ritornello:</strong><br>
       Registrazione: Parti con 500 SWISSHEARTS.<br>
-      Sfide: Fino a 10 SWISSHEARTS per creare la tua squadra.<br>
-      Montepremi: Il vincitore prende tutto. Pareggio? Dividetevi la gloria.<br>
-      Punteggi: Papa esatto? 10 punti. Regionale? Fino a 5 punti. Fumate? 2,5 punti.<br>
-      Ascesa: Più SWISSHEARTS, più prestigio. Habemus Magnum Victorem!<br><br>
+      Sfide: Usa fino a 10 SWISSHEARTS per creare la tua squadra di artisti.<br>
+      Montepremi: Chi totalizza più punti si prende tutto. Parità? Si divide la gloria!<br>
+      Punteggi: Ogni artista ti dà punti in base ai voti ottenuti (voti divisi per 100 e normalizzati a step di 0.5).<br>
+      Esempio: 456 voti = 4.5 punti. 445 voti = 4.0 punti.<br>
+      Classifica: Più SWISSHEARTS guadagni, più sali in classifica. Chi ha ritmo… conquista il podio! 🎶<br><br>
       Vuoi leggere il regolamento completo? <a href="rules.html">Vai al regolamento</a>.
     </p>
   </div>
+  
+  
 
   <div class="video">
     <h2>Guarda il video tutorial</h2>
@@ -155,7 +161,7 @@
   </div>
 
   <div class="footer">
-    <p>© 2025 fantaconclave.it - Per info: <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
+    <p>© 2025 fantaeurovision25 - Per info: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
   </div>
 </body>
 </html>
