--- a/public/index_land.html
+++ b/public/index_land.html
@@ -129,7 +129,7 @@
   <!-- Hero -->
   <header class="hero" data-aos="fade-in">
     <div class="hero-content" data-aos="zoom-in" data-aos-delay="200">
-      <h1>fantaconclave.it</h1>
+      <h1>fantaeurovision25</h1>
       <p>Ci siamo ! Indovina la fumata bianca e vinci i tuoi Papa Coins!</p>
       <div class="countdown" id="countdown" data-aos="fade-up" data-aos-delay="400">
         <div><span id="days">5</span><br>Giorni</div>
@@ -178,7 +178,7 @@
 
   <!-- Footer -->
   <footer data-aos="fade-in">
-    &copy; 2025 fantaconclave.it - Tutti i diritti riservati
+    &copy; 2025 fantaeurovision25 - Tutti i diritti riservati
   </footer>
 
   <!-- Scripts -->
