--- a/public/index_simple.html
+++ b/public/index_simple.html
@@ -114,7 +114,7 @@
   
   <div class="terms">
     by signing in, you agree with the <a href="terms.html" target="_blank">Terms & Conditions</a>
-    <br><br>© 2025 fantaconclave.it All rights reserved. <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a>
+    <br><br>© 2025 fantaeurovision25 All rights reserved. <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a>
 </div>
   
   <!-- Includi il file auth.js, che contiene la configurazione Firebase -->
