--- a/public/privacy.html
+++ b/public/privacy.html
@@ -14,11 +14,11 @@
     }
     h1 {
       color: #131313;
-      border-bottom: 2px solid #ff5500;
+      border-bottom: 2px solid #ed2224;
       padding-bottom: 10px;
     }
     h2 {
-      color: #ff5500;
+      color: #ed2224;
       margin-top: 20px;
     }
     p {
@@ -28,102 +28,107 @@
       margin-bottom: 30px;
     }
     a {
-      color: #ff5500;
+      color: #ed2224;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
   <h1>Informativa sulla Privacy</h1>
-  
+
   <div class="section">
     <h2>1. Introduzione</h2>
-    <p>La presente Informativa sulla Privacy descrive come FANTAEUROVISION25 raccoglie, utilizza e condivide i tuoi dati personali quando utilizzi la nostra applicazione e il nostro sito web.</p>
+    <p>Questa informativa descrive come FANTAEUROVISION25 raccoglie, utilizza e protegge i tuoi dati personali quando usi la nostra piattaforma per giocare al fantasy game ispirato all’Eurovision Song Contest.</p>
   </div>
-  
+
   <div class="section">
     <h2>2. Dati Raccolti</h2>
-    <p>Raccogliamo diversi tipi di informazioni, tra cui:</p>
+    <p>Raccogliamo diversi tipi di dati, tra cui:</p>
     <ul>
-      <li>Informazioni di registrazione (nome, email, password)</li>
-      <li>Dati di profilo (avatar, username)</li>
-      <li>Dati di utilizzo (interazioni con l'app, contest creati)</li>
-      <li>Informazioni sul dispositivo (tipo di dispositivo, sistema operativo)</li>
+      <li>Dati di registrazione (nome, email, password)</li>
+      <li>Dati di profilo (username, avatar)</li>
+      <li>Interazioni con l'app (squadre create, sfide lanciate)</li>
+      <li>Informazioni tecniche (tipo di dispositivo, sistema operativo)</li>
     </ul>
   </div>
-  
+
   <div class="section">
-    <h2>3. Utilizzo dei Dati</h2>
-    <p>Utilizziamo i tuoi dati per:</p>
+    <h2>3. Come utilizziamo i tuoi dati</h2>
     <ul>
-      <li>Fornire e migliorare i nostri servizi</li>
-      <li>Personalizzare la tua esperienza</li>
-      <li>Comunicare con te riguardo al tuo account</li>
-      <li>Garantire la sicurezza della piattaforma</li>
+      <li>Per offrire e migliorare l’esperienza di gioco</li>
+      <li>Per personalizzare l’interfaccia e le interazioni</li>
+      <li>Per contattarti in merito al tuo account o al servizio</li>
+      <li>Per garantire la sicurezza e il corretto funzionamento della piattaforma</li>
     </ul>
   </div>
-  
+
   <div class="section">
     <h2>4. Condivisione dei Dati</h2>
-    <p>Non vendiamo i tuoi dati personali a terze parti. Condividiamo i dati solo con:</p>
+    <p>I tuoi dati non verranno mai venduti. Possiamo condividerli solo con:</p>
     <ul>
-      <li>Fornitori di servizi che ci aiutano a gestire la piattaforma</li>
-      <li>Partner commerciali con il tuo consenso</li>
-      <li>Autorità legali quando richiesto dalla legge</li>
+      <li>Fornitori di servizi tecnici che supportano la piattaforma</li>
+      <li>Partner, ma solo con il tuo consenso esplicito</li>
+      <li>Autorità competenti, se richiesto dalla legge</li>
     </ul>
   </div>
-  
+
   <div class="section">
     <h2>5. Cookie e Tecnologie Simili</h2>
-    <p>Utilizziamo cookie e tecnologie simili per migliorare la tua esperienza, analizzare l'utilizzo della piattaforma e personalizzare i contenuti.</p>
+    <p>Utilizziamo cookie e strumenti simili per migliorare l’usabilità, analizzare i dati e personalizzare contenuti e funzionalità.</p>
   </div>
-  
+
   <div class="section">
-    <h2>6. I Tuoi Diritti</h2>
-    <p>Hai il diritto di:</p>
+    <h2>6. I tuoi diritti</h2>
+    <p>Hai diritto a:</p>
     <ul>
-      <li>Accedere ai tuoi dati personali</li>
-      <li>Correggere i tuoi dati</li>
-      <li>Cancellare il tuo account</li>
-      <li>Limitare il trattamento dei tuoi dati</li>
-      <li>Opporti al trattamento dei tuoi dati</li>
+      <li>Accedere ai tuoi dati</li>
+      <li>Chiedere correzioni</li>
+      <li>Richiedere la cancellazione del tuo account</li>
+      <li>Limitare o opporti al trattamento</li>
+      <li>Ricevere una copia dei tuoi dati (portabilità)</li>
     </ul>
   </div>
-  
+
   <div class="section">
     <h2>7. Sicurezza dei Dati</h2>
-    <p>Adottiamo misure di sicurezza tecniche e organizzative per proteggere i tuoi dati personali da accessi non autorizzati, perdite o alterazioni.</p>
+    <p>Adottiamo misure di sicurezza tecniche e organizzative per proteggere i tuoi dati da accessi non autorizzati, perdite o modifiche non intenzionali.</p>
   </div>
-  
+
   <div class="section">
-    <h2>8. Modifiche alla Privacy Policy</h2>
-    <p>Ci riserviamo il diritto di modificare questa Informativa sulla Privacy in qualsiasi momento. Le modifiche verranno comunicate attraverso l'app e il sito web.</p>
+    <h2>8. Modifiche all’informativa</h2>
+    <p>Questa informativa può essere aggiornata. Ti informeremo tramite app o sito ogni volta che apportiamo modifiche rilevanti.</p>
   </div>
-  
+
   <div class="section">
     <h2>9. Contatti</h2>
-    <p>Per qualsiasi domanda o richiesta riguardante la tua privacy, contatta il nostro Responsabile della Protezione dei Dati all'indirizzo <a href="mailto:infoy@fantaconclave.it">info@fantaconclave.it</a>.</p>
+    <p>Per qualsiasi richiesta o chiarimento sulla gestione dei tuoi dati, puoi contattare il nostro team all’indirizzo: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
   </div>
 
   <div class="section">
-    <h2>10. Utilizzo di Firebase e Servizi di Terze Parti</h2>
-    <p>Per l'autenticazione e la gestione di alcuni servizi, utilizziamo Firebase di Google. I tuoi dati di accesso (come email e password) sono custoditi in modo sicuro sui server di Firebase, conformemente alle policy di sicurezza di Google. Puoi trovare ulteriori informazioni sulla gestione dei dati da parte di Google visitando <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a>.</p>
+    <h2>10. Servizi di Terze Parti (Firebase)</h2>
+    <p>Usiamo Firebase di Google per l’autenticazione e l’hosting. I tuoi dati di accesso sono conservati in modo sicuro da Google. Puoi leggere l’informativa completa di Google qui: <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></p>
   </div>
 
   <div class="section">
-    <h2>11. Durata del Trattamento e Chiusura del Servizio</h2>
-    <p>FANTAEUROVISION25 è un'applicazione legata all'evento dell'elezione papale e verrà chiusa entro pochi giorni dalla proclamazione del nuovo Papa. Dopo la chiusura, i dati personali saranno cancellati entro 30 giorni, salvo obblighi di legge differenti.</p>
+    <h2>11. Durata del Trattamento</h2>
+    <p>I tuoi dati restano attivi finché usi la piattaforma. Se elimini l’account o il servizio viene interrotto, i dati saranno cancellati entro 30 giorni, salvo obblighi legali diversi.</p>
   </div>
 
   <div class="section">
-    <h2>12. Base Giuridica del Trattamento</h2>
-    <p>Trattiamo i tuoi dati personali sulla base del tuo consenso, dell'esecuzione di un contratto (fornitura del servizio) e per adempiere a obblighi legali.</p>
+    <h2>12. Base Giuridica</h2>
+    <p>Trattiamo i tuoi dati solo sulla base di:</p>
+    <ul>
+      <li>Consenso informato</li>
+      <li>Esecuzione dei servizi offerti</li>
+      <li>Obblighi legali da rispettare</li>
+    </ul>
   </div>
 
   <div class="section">
-    <p><strong>Diritti riservati a fantaconclave.it</strong></p>
-    <p>Per ogni informazione su FANTAEUROVISION25, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
-    <p><em>In fide et ludo, semper ad astra!</em></p>
+    <p><strong>FANTAEUROVISION25 – Tutti i diritti riservati</strong></p>
+    <p>Hai un’idea per un fantasy musicale? Scrivici a <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p><em>Privacy, musica e rispetto. Sempre. 🎶</em></p>
   </div>
 </body>
+
 </html>
