--- a/public/signin.html
+++ b/public/signin.html
@@ -43,7 +43,7 @@
       font-family: 'Barlow Condensed', sans-serif;
       font-weight: 700;
       font-size: 48px;
-      color: #FFFF00; /* Colore giallo */
+      color: #0bdad7; 
       letter-spacing: 1px;
       text-transform: uppercase;
     }
@@ -84,8 +84,9 @@
   </style>
 </head>
 <body>
-  <div class="logo">
-    <div class="logo-text">FANTAEUROVISION25</div>
+  <div class="logo-text">FANTA</div>
+  <div class="logo-image">
+    <img src="images/logo.png" alt="Logo FANTAEUROVISION25" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
   </div>
   
   <!-- Add error message container -->
@@ -114,7 +115,7 @@
   
   <div class="terms">
     by signing in, you agree with the <a href="terms.html" target="_blank">Terms & Conditions</a>
-    <br><br>© 2025 fantaconclave.it All rights reserved. <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a>
+    <br><br>© 2025 fantaeurovision25 All rights reserved. <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a>
 </div>
   
   <!-- Includi il file auth.js, che contiene la configurazione Firebase -->
