--- a/public/terms.html
+++ b/public/terms.html
@@ -13,12 +13,13 @@
       background-color: #f5f5f5;
     }
     h1 {
-      color: #131313;
-      border-bottom: 2px solid #ff5500;
+
+      color: #0A0034;
+      border-bottom: 2px solid #ed2224;
       padding-bottom: 10px;
     }
     h2 {
-      color: #ff5500;
+      color: #ed2224;
       margin-top: 20px;
     }
     p {
@@ -28,81 +29,81 @@
       margin-bottom: 30px;
     }
     a {
-      color: #ff5500;
+      color: #ed2224;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
   <h1>Termini e Condizioni</h1>
-  
+
   <div class="section">
     <h2>1. Accettazione dei Termini</h2>
-    <p>Utilizzando FANTAEUROVISION25, accetti i presenti Termini e Condizioni. Se non accetti questi termini, non utilizzare la nostra piattaforma.</p>
+    <p>Utilizzando FANTAEUROVISION25, accetti i presenti Termini e Condizioni. Se non sei d’accordo con questi termini, ti invitiamo a non utilizzare la piattaforma.</p>
   </div>
-  
+
   <div class="section">
     <h2>2. Descrizione del Servizio</h2>
-    <p>FANTAEUROVISION25 è una piattaforma di gioco fantasy a tema conclave papale, che consente agli utenti di creare contest, selezionare papabili e competere con altri utenti in base all'esito dei conclavi. Il gioco è esclusivamente ai fini di intrattenimento e senza alcuno scopo di lucro.</p>
+    <p>FANTAEUROVISION25 è un fantasy game amatoriale ispirato al mondo dell’Eurovision Song Contest. Gli utenti possono creare una squadra di artisti e guadagnare punti in base ai voti reali ottenuti durante la competizione. Il tutto è svolto esclusivamente per finalità di intrattenimento, senza alcuno scopo di lucro.</p>
   </div>
-  
+
   <div class="section">
     <h2>3. Registrazione e Account</h2>
-    <p>Per utilizzare FANTAEUROVISION25, devi registrarti e creare un account. Sei responsabile di mantenere la riservatezza delle tue credenziali e di tutte le attività che si verificano sotto il tuo account.</p>
+    <p>Per partecipare a FANTAEUROVISION25, è necessario registrarsi e creare un account. Ogni utente è responsabile della sicurezza delle proprie credenziali e delle attività svolte tramite il proprio profilo.</p>
   </div>
-  
+
   <div class="section">
     <h2>4. Condotta dell'Utente</h2>
-    <p>Utilizzando FANTAEUROVISION25, accetti di:</p>
+    <p>Utilizzando FANTAEUROVISION25, ti impegni a:</p>
     <ul>
-      <li>Non violare alcuna legge o regolamento</li>
-      <li>Non interferire con il funzionamento della piattaforma</li>
-      <li>Non impersonare altre persone</li>
-      <li>Non utilizzare la piattaforma per scopi fraudolenti</li>
+      <li>Non violare leggi o regolamenti vigenti</li>
+      <li>Non interferire con il corretto funzionamento della piattaforma</li>
+      <li>Non impersonare altre persone o artisti</li>
+      <li>Non usare la piattaforma per scopi illeciti o fraudolenti</li>
     </ul>
   </div>
-  
+
   <div class="section">
     <h2>5. Proprietà Intellettuale</h2>
-    <p>Tutti i contenuti presenti su FANTAEUROVISION25, inclusi loghi, testi, grafica e software, sono di proprietà di FANTAEUROVISION25 o dei suoi licenziatari e sono protetti dalle leggi sulla proprietà intellettuale.</p>
+    <p>I contenuti originali presenti su FANTAEUROVISION25 (testi, grafiche, logiche di gioco) sono di proprietà della piattaforma o concessi in uso dai rispettivi titolari. I loghi e i materiali ufficiali dell’Eurovision Song Contest sono di proprietà dell’European Broadcasting Union (EBU) e vengono utilizzati a scopo descrittivo e nel rispetto del fair use, senza alcuna intenzione di violarne i diritti o di confondere l’utente.</p>
   </div>
-  
+
   <div class="section">
-    <h2>6. Scopo Ludico e Gratuità</h2>
-    <p>FANTAEUROVISION25 è un gioco gratuito, creato al solo fine di divertire gli utenti. Non sono previsti pagamenti, scommesse, né premi in denaro o beni materiali. Qualsiasi attività svolta sulla piattaforma ha natura esclusivamente ricreativa.</p>
+    <h2>6. Gioco Gratuito e Finalità</h2>
+    <p>FANTAEUROVISION25 è totalmente gratuito e non prevede costi, premi in denaro o forme di scommessa. Ogni attività ha come unico scopo il divertimento e la partecipazione entusiasta alla gara canora più iconica d’Europa.</p>
   </div>
-  
+
   <div class="section">
     <h2>7. Limitazione di Responsabilità</h2>
-    <p>FANTAEUROVISION25 non è responsabile per eventuali danni diretti, indiretti, incidentali o consequenziali derivanti dall'utilizzo o dall'impossibilità di utilizzare la piattaforma.</p>
+    <p>FANTAEUROVISION25 non è responsabile per eventuali danni diretti o indiretti derivanti dall’uso della piattaforma, da malfunzionamenti tecnici o da errori nel calcolo dei punteggi.</p>
   </div>
-  
+
   <div class="section">
     <h2>8. Modifiche ai Termini</h2>
-    <p>Ci riserviamo il diritto di modificare questi Termini e Condizioni in qualsiasi momento. Le modifiche verranno comunicate attraverso l'app e il sito web.</p>
+    <p>Ci riserviamo il diritto di modificare in qualsiasi momento i presenti Termini e Condizioni. Le modifiche saranno pubblicate sul sito ufficiale e comunicate agli utenti registrati.</p>
   </div>
-  
+
   <div class="section">
     <h2>9. Legge Applicabile</h2>
-    <p>Questi Termini e Condizioni sono regolati dalle leggi italiane. Qualsiasi controversia sarà soggetta alla giurisdizione esclusiva dei tribunali italiani.</p>
+    <p>Questi Termini e Condizioni sono regolati dalla legge italiana. Eventuali controversie saranno di competenza esclusiva dei tribunali italiani.</p>
   </div>
-  
+
   <div class="section">
     <h2>10. Contatti</h2>
-    <p>Per qualsiasi domanda o chiarimento sui Termini e Condizioni, contatta il nostro team all'indirizzo <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a>.</p>
+    <p>Per qualunque chiarimento o comunicazione, puoi scriverci all’indirizzo: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
   </div>
 
   <div class="section">
-    <h2>11. Messaggio di Pace</h2>
-    <p>FANTAEUROVISION25 augura al nuovo Papa un lungo pontificato di pace, serenità e rispetto tra tutte le religioni. Che il suo cammino sia illuminato dalla saggezza e dalla compassione verso ogni essere umano.</p>
+    <h2>11. Collaborazione e Trasparenza</h2>
+    <p>FANTAEUROVISION25 non è affiliato, sponsorizzato o riconosciuto ufficialmente dall’European Broadcasting Union (EBU) o da altri enti legati all’Eurovision Song Contest. Ogni riferimento al brand “Eurovision” è puramente descrittivo e celebrativo. Nessuna intenzione competitiva o commerciale è alla base del progetto.</p>
+    <p>Se l’organizzazione ufficiale desidera mettersi in contatto con noi per eventuali collaborazioni, siamo entusiasti all’idea: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
   </div>
 
-  
   <div class="section">
-    <p><strong>Diritti riservati a fantaconclave.it</strong></p>
-    <p>Per ogni informazione su FANTAEUROVISION25, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
-    <p><em>In fide et ludo, semper ad astra!</em></p>
+    <p><strong>FANTAEUROVISION25 – Tutti i diritti riservati</strong></p>
+    <p>Se vuoi creare il tuo fantasy personalizzato o hai un’idea da proporre, contattaci. Ci piace dare voce alla creatività (in ogni lingua). 🎤</p>
+    <p><em>Che vinca la musica, sempre.</em></p>
   </div>
-  
 </body>
+
 </html>
