--- a/public/_old/25riassunto.html
+++ b/public/_old/25riassunto.html
@@ -143,7 +143,7 @@
   </div>
   <div class="budget-bar">
     <img src="icons/sh.png" alt="Teex" class="teex-left-icon">
-    <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">Papa Coins left</span></span>
+    <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">SwissHearts left</span></span>
   </div>
   <div id="messaggio" style="display: none;"></div>
   <div id="userNameDiv" style="display: none;"></div>
