--- a/public/_old/riassunto - Copy.html
+++ b/public/_old/riassunto - Copy.html
@@ -26,7 +26,7 @@
   </div>
   <div class="budget-bar">
     <img src="icons/sh.png" alt="Teex" class="teex-left-icon">
-    <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">Papa Coins left</span></span>
+    <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">SwissHearts left</span></span>
   </div>
   <div id="messaggio" style="display: none;"></div>
   <div id="userNameDiv" style="display: none;"></div>
@@ -113,7 +113,7 @@
       const teexLeft = getAvailableBudget();
       const teexLeftEl = document.getElementById("teexLeft");
       if (teexLeftEl) {
-        teexLeftEl.innerHTML = `<span class="teex-left-text-cyan">${teexLeft.toFixed(1)}</span> <span class="teex-left-text-white">Papa Coins left</span>`;
+        teexLeftEl.innerHTML = `<span class="teex-left-text-cyan">${teexLeft.toFixed(1)}</span> <span class="teex-left-text-white">SwissHearts left</span>`;
       }
       // Aggiorna le classi dei pulsanti CONFIRM e RESET in base alla presenza di giocatori
       const confirmBtn = document.getElementById("confirmFooterBtn");
@@ -534,7 +534,7 @@
           const totalTeamCost = getTotalCost();
           // Aggiorna i Teex rimasti (20 - costo totale)
           const teexLeft = getAvailableBudget();
-          document.getElementById("teexLeft").innerHTML = `<span class="teex-left-text-cyan">${teexLeft.toFixed(1)}</span> <span class="teex-left-text-white">Papa Coins left</span>`;
+          document.getElementById("teexLeft").innerHTML = `<span class="teex-left-text-cyan">${teexLeft.toFixed(1)}</span> <span class="teex-left-text-white">SwissHearts left</span>`;
         }
         // Get contest details to get team costs
         const contestResp = await fetch(`/contest-details?contest=${contestId}&user=${userId}`);
@@ -621,7 +621,7 @@
         const totalTeamCost = getTotalCost();
         // Aggiorna i Teex rimasti (20 - costo totale)
         const teexLeft = getAvailableBudget();
-        document.getElementById("teexLeft").innerHTML = `<span class="teex-left-text-cyan">${teexLeft.toFixed(1)}</span> <span class="teex-left-text-white">Papa Coins left</span>`;
+        document.getElementById("teexLeft").innerHTML = `<span class="teex-left-text-cyan">${teexLeft.toFixed(1)}</span> <span class="teex-left-text-white">SwissHearts left</span>`;
         // These elements might not exist in this page, so wrap them in try/catch
         try {
           document.getElementById("currentUserName").textContent = currentUser.username;
