--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -225,7 +225,11 @@
           <div class="welcome-container">
             <div class="welcome-text">
               <div class="welcome-to">WELCOME TO</div>
-              <div class="fanteex-title">FANTAEUROVISION25</div>
+              <div class="fanteex-title">FANTA</div>
+              <div class="logo-image">
+                <img src="images/logo.png" alt="Logo FANTAEUROVISION25" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
+              </div>
+
               <div class="start-game">START YOUR FIRST GAME</div>
             </div>
             <div class="animated-arrows">
