--- a/public/_old/25aggiungi-giocatore.html
+++ b/public/_old/25aggiungi-giocatore.html
@@ -16,14 +16,14 @@
     <div class="user-profile">
       <img src="icons/freccia.png" alt="Back" id="backArrow" style="width: 30px; height: 30px; cursor: pointer; margin-right: 12px;">
       <div class="user-info">
-        <h1 class="user-name">ADD PAPABILI</h1>
+        <h1 class="user-name">ADD ARTISTS</h1>
       </div>
     </div>
     
     <!-- New header right section with player stats -->
     <div class="header-stats">
       <div class="stats-row">
-        <div class="label_m_small">Papabili</div>
+        <div class="label_m_small">ARTISTS</div>
         <div class="label_m_small">Cost</div>
         <div class="label_m_small">PPC left</div>
       </div>
