--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
  <!-- SEO Base -->
-<meta name="description" content="FANTAEUROVISION25 è il fantasy game più celestiale del web. Sfida altri fedeli, crea la tua squadra di papabili e conquista il trono del conclave!">
-<meta name="keywords" content="fantacalcio, fantasy game, conclave, papabili, SWISSHEARTS, sfide, FANTAEUROVISION25">
+<meta name="description" content="FANTAEUROVISION25 è il fantasy game più celestiale del web. Sfida altri fedeli, crea la tua squadra di ARTISTS e conquista il trono del conclave!">
+<meta name="keywords" content="fantacalcio, fantasy game, conclave, ARTISTS, SWISSHEARTS, sfide, FANTAEUROVISION25">
 <meta name="author" content="fantaeurovision25">
 
 <!-- Open Graph per condivisione social -->
@@ -21,7 +21,7 @@
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
-<meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di papabili e vinci!">
+<meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di ARTISTS e vinci!">
 <meta name="twitter:image" content="https://fantaeurovision25/icons/sh.png">
 
  
