--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
  <!-- SEO Base -->
-<meta name="description" content="FANTAEUROVISION25 è il fantasy game più celestiale del web. Sfida altri fedeli, crea la tua squadra di ARTISTS e conquista il trono del conclave!">
-<meta name="keywords" content="fantacalcio, fantasy game, conclave, ARTISTS, SWISSHEARTS, sfide, FANTAEUROVISION25">
-<meta name="author" content="fantaeurovision25">
+ <meta name="description" content="FANTAEUROVISION25 è il fantasy game più musicale del web. Scegli i tuoi artisti preferiti, sfida altri fan e scala la classifica a suon di voti!">
+ <meta name="keywords" content="fantasy game, Eurovision, artisti, musica, SWISSHEARTS, FANTAEUROVISION25, sfide, voti, gioco gratuito, classifica">
+ <meta name="author" content="FANTAEUROVISION25 Team">
+ 
 
 <!-- Open Graph per condivisione social -->
 <meta property="og:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
