--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
  
 
 <!-- Open Graph per condivisione social -->
-<meta property="og:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
+<meta property="og:title" content="FANTAEUROVISION25 - Il fantasy game dell'Eurovision 25">
 <meta property="og:description" content="Sfida altri fedeli, guadagna SWISSHEARTS e conquista il trono. Habemus Magnum Victorem!">
 <meta property="og:image" content="https://fantaeurovision25/icons/sh.png"> 
 <meta property="og:url" content="https://fantaeurovision25/">
@@ -140,7 +140,9 @@
       Registrazione: Parti con 500 SWISSHEARTS.<br>
       Sfide: Usa fino a 10 SWISSHEARTS per creare la tua squadra di artisti.<br>
       Montepremi: Chi totalizza più punti si prende tutto. Parità? Si divide la gloria!<br>
-      Punteggi: Ogni artista ti dà punti in base ai voti ottenuti (voti divisi per 100 e normalizzati a step di 0.5).<br>
+      Punteggi: <BR>
+        SemiFinale: Se l'artista si qualifica 2.5 punti, se no zero<br>
+        Finale: Ogni artista ti dà punti in base ai voti ottenuti (voti divisi per 100 e normalizzati a step di 0.5).<br>
       Esempio: 456 voti = 4.5 punti. 445 voti = 4.0 punti.<br>
       Classifica: Più SWISSHEARTS guadagni, più sali in classifica. Chi ha ritmo… conquista il podio! 🎶<br><br>
       Vuoi leggere il regolamento completo? <a href="rules.html">Vai al regolamento</a>.
@@ -149,12 +151,7 @@
   
   
 
-  <div class="video">
-    <h2>Guarda il video tutorial</h2>
-    <div style="background-color:#222; border-radius:12px; overflow:hidden;">
-      <iframe src="https://www.youtube.com/embed/qqO8Zw9rVTI?modestbranding=1&showinfo=0&rel=0" allowfullscreen></iframe>
-    </div>
-  </div>
+
 
   <div class="buttons">
     <button class="btn btn-yellow" onclick="window.location.href='register.html'">REGISTRATI</button>
