--- a/public/rules.html
+++ b/public/rules.html
@@ -38,7 +38,10 @@
       <li><strong>Registrazione:</strong> Parti con <strong>500 SWISSHEARTS</strong>.</li>
       <li><strong>Sfide:</strong> Usa fino a <strong>10 SWISSHEARTS</strong> per creare la tua squadra di artisti.</li>
       <li><strong>Montepremi:</strong> Chi totalizza più punti vince tutto. Parità? La gloria si condivide!</li>
-      <li><strong>Punteggi:</strong> I punti dipendono dai voti reali: dividi i voti per 100 e normalizza a step di 0.5.</li>
+      <li><strong>Punteggi:</strong>
+        <BR>
+          SemiFinale: Se l'artista si qualifica 2.5 punti, se no zero<br>
+          Finale: Ogni artista ti dà punti in base ai voti ottenuti (voti divisi per 100 e normalizzati a step di 0.5).<br>
       <li><strong>Classifica:</strong> Più SWISSHEARTS vinci, più sali sul podio della musica!</li>
     </ul>
   </div>
@@ -84,6 +87,8 @@
 
   <div class="section">
     <h2>6. Punteggio</h2>
+    <p>SemiFinale: Se l'artista si qualifica 2.5 punti, se no zero</p>
+    <h3>Finale:</h3>
     <p>I punti vengono assegnati in base ai voti reali ottenuti dagli artisti, secondo questa formula:</p>
     <ul>
       <li><strong>Voti / 100</strong>, arrotondati a step di 0.5.</li>
